# rabbitmq-stream

./: .gitignore  README.md  pyproject.toml
rabbitmq_stream/: client.py  codecs.py  protocol.py  types.py
tests/: client_test.py
