[tool.poetry]
name = "rabbitmq_stream"
version = "0.1.0"
description = "RabbitMQ stream Python client"
authors = ["Igor Susic"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = ">=6.2.5"
pytest-asyncio = ">=0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_level='NOTSET'
testpaths = [
    "tests",
]
